--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "^7.2.12",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -23,6 +24,7 @@
     "bootstrap": "4.3.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "ts-md5": "^1.2.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
