--- a/front/package.json
+++ b/front/package.json
@@ -26,7 +26,10 @@
     "rxjs": "~6.3.3",
     "ts-md5": "^1.2.4",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "@types/googlemaps": "^3.30.7",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
