--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
@@ -21,15 +22,15 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@fortawesome/fontawesome-free": "5.8.1",
+    "@types/googlemaps": "^3.30.7",
     "bootstrap": "4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9",
     "rxjs": "~6.3.3",
     "ts-md5": "^1.2.4",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "@types/googlemaps": "^3.30.7",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.12.9"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
